# klinpopup-svn

tags/release-0.3.1/: README  TODO
tags/release-0.3.1/debian/: klinpopup.install  klinpopup16.xpm  klinpopup32.xpm
tags/release-0.3.1/doc/de/: Makefile.am
tags/release-0.3.1/po/: es.po  fr.po  ru.po
tags/release-0.3.1/src/: klinpopup.h  klinpopupui.rc  klinpopupview.cpp  klinpopupview_base.ui  systemtray.cpp
tags/release-0.3.2/: AUTHORS  ChangeLog  Doxyfile  acinclude.m4  configure  configure.in  configure.in.in
tags/release-0.3.2/admin/: acinclude.m4.in
tags/release-0.3.2/debian/: control  postinst  postrm
tags/release-0.3.2/po/: klinpopup.pot
tags/release-0.3.2/src/: klinpopup.h  makepopup.h  prefs.ui  systemtray.h
tags/release-0.3.3/: Doxyfile  TODO  configure.in.in  klinpopup.spec  suse_default-sound.diff
tags/release-0.3.3/debian/: changelog  copyright
tags/release-0.3.3/doc/de/: index.docbook
tags/release-0.3.3/doc/en/: index.docbook
tags/release-0.3.3/po/: es.po  fr.po  klinpopup.pot  nb.po  pt_BR.po
tags/release-0.3.3/src/: Makefile.am  klinpopup.h  klinpopup.kcfg  klinpopupview.cpp  main.cpp  makepopup.cpp  makepopup.h  prefs.cpp  prefs.h  prefs_base.ui  settings.kcfgc
tags/release-0.3.3/templates/: h
trunk/klinpopup/: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.in  README  TODO  acinclude.m4  config.h.in  configure  configure.in  configure.in.in  klinpopup.kdevelop  klinpopup.spec
trunk/klinpopup/admin/: cvs.sh
trunk/klinpopup/debian/: README.Debian  changelog  control  docs  klinpopup.menu  rules
trunk/klinpopup/doc/: Makefile.am  Makefile.in
trunk/klinpopup/doc/de/: Makefile.in  index.docbook
trunk/klinpopup/doc/en/: Makefile.am  Makefile.in  index.docbook
trunk/klinpopup/po/: Makefile.in  de.po  es.po  fr.po  it.po  klinpopup.pot  nb.po  pt_BR.po  ru.po  vi.po
trunk/klinpopup/src/: CMakeLists.txt  Makefile.am  Makefile.in  klinpopup.cpp  klinpopup.desktop  klinpopup.h  klinpopup.kcfg  klinpopupui.rc  klinpopupview.cpp  klinpopupview.h  klinpopupview_base.ui  main.cpp  makepopup.cpp  makepopup.h  popupmessage.h  prefs.cpp  prefs.h  prefs_base.ui  receivepopup.sh  settings.kcfgc  systemtray.cpp  systemtray.h
trunk/klinpopup/src/icons/: CMakeLists.txt  Makefile.in
